
2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: libtoolized libsupport

2017-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

2007-12-27  Roger While <simrw@sim-basis.de>

	** Mark 1.0 RELEASE

2006-10-23  Roger While <simrw@sim-basis.de>

	* Prototype in dummymac.c

2005-10-25  Roger While <simrw@sim-basis.de>

	* New element dummymac.c - Needed while some versions of
	  "ar" are not capable of generating empty archives.

2003-07-28  Keisuke Nishida  <knishida@netlab.jp>

	* malloc.c, memcmp.c, realloc.c: Removed.

2002-08-29  Keisuke Nishida  <knishida@netlab.jp>

	* mkstemp.c, tempname.c: Removed.

2002-08-28  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am: Use AC_LIBOBJ scheme.

	* memcmp.c, mkstemp.c, tempname.c: Extracted from fileutils-4.1.11.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* getopt.c, getopt.h, getopt1.c: Extracted from glibc-2.2.5.


Copyright 2002-2012, 2017 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.