@@ -105,7 +105,7 @@ cob_gen_optim (const enum cb_optim val)
 		output_storage ("		cob_field *content, unsigned int is_suppressed,");
 		output_storage ("		cob_ml_tree *children, cob_ml_tree *sibling)");
 		output_storage ("{");
-		output_storage ("       tree->name = name;");
+		output_storage ("	tree->name = name;");
 		output_storage ("	tree->attrs = attrs;");
 		output_storage ("	tree->content = content;");
 		output_storage ("	tree->is_suppressed = is_suppressed;");
@@ -225,13 +225,13 @@ cob_gen_optim (const enum cb_optim val)
 		output_storage ("{");
 		output_storage ("	register const unsigned char	*p;");
 		output_storage ("	register int	n;");
-		output_storage ("	register int 	retval = 0;");
+		output_storage ("	register int	val = 0;");
 		output_storage ("	p = (const unsigned char *)data;");
 		output_storage ("	for (n = 0; n < size; ++n, ++p) {");
-		output_storage ("		retval *= 10;");
-		output_storage ("		retval += (*p & 0x0F);");
+		output_storage ("		val = (val * 10)");
+		output_storage ("		    + (*p & 0x0F);");
 		output_storage ("	}");
-		output_storage ("	return retval;");
+		output_storage ("	return val;");
 		output_storage ("}");
 		return;
 
@@ -241,18 +241,17 @@ cob_gen_optim (const enum cb_optim val)
 		output_storage ("{");
 		output_storage ("	register const unsigned char	*p;");
 		output_storage ("	register int	n;");
-		output_storage ("	register int 	retval = 0;");
+		output_storage ("	register int 	val = 0;");
 		output_storage ("	p = (const unsigned char *)data;");
 		output_storage ("	for (n = 0; n < size; ++n, ++p) {");
-		output_storage ("		retval *= 10;");
-		output_storage ("		if ((*p & 0x40) && (n + 1) == size) {");
-		output_storage ("			retval += (*p & 0x0F);");
-		output_storage ("			retval = -retval;");
-		output_storage ("		} else {");
-		output_storage ("			retval += (*p & 0x0F);");
-		output_storage ("		}");
+		output_storage ("		val = (val * 10)");
+		output_storage ("		    + (*p & 0x0F);");
 		output_storage ("	}");
-		output_storage ("	return retval;");
+		output_storage ("	p--;");
+		output_storage ("	if (*p & 0x40) {");
+		output_storage ("		return -val;");
+		output_storage ("	}");
+		output_storage ("	return val;");
 		output_storage ("}");
 		return;
 
