@@ -964,7 +964,7 @@
 	  COB_CHK_ODO, COB_CHK_REFMOD_MIN, COB_CHK_REFMOD for inline checks of
 	  most-used runtime checks - now only passed to libcob in case of actual
 	  errors; new entry COB_NOP to replace the cob_nop call (frame switch)
-	  by a simple pointer comparison, which also ensures on all tested
+	  by a simple pointer comparision, which also ensures on all tested
 	  compilers that the line is not optimized out, and for those that
 	  optimize the check away the old cob_nop call is still done
 
