@@ -1,4 +1,11 @@
 
+2022-10-16  Simon Sobisch <simonsobisch@gnu.org>
+
+	* gettext.h: updated from GNU gettext 0.21,
+	  featuring license change from GPL to LGPL an optimizations for clang
+	* gettext.h [HAVE_NO_NGETTEXT]: manual addition to support systems that
+	  have gettext but not ngettext (which is only used in GnuCOBOL 4+)
+
 2020-09-30  Simon Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: libtoolized libsupport
@@ -45,7 +52,7 @@
 	* getopt.c, getopt.h, getopt1.c: Extracted from glibc-2.2.5.
 
 
-Copyright 2002-2012, 2017 Free Software Foundation, Inc.
+Copyright 2002-2012, 2017, 2020, 2022 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
